fix: Prose a:hover color on dark mode

--- a/app/global.css
+++ b/app/global.css
@@ -93,7 +93,7 @@ p {
 }
 
 .prose a {
-  @apply hover:underline underline-offset-2 decoration-teal-900 dark:decoration-teal-500 text-teal-900 hover:text-teal-950 transition-all dark:text-white;
+  @apply hover:underline underline-offset-2 decoration-teal-900 dark:decoration-teal-500 text-teal-900 hover:text-teal-950 dark:hover:text-white transition-all dark:text-white;
 }
 
 .prose .anchor:after {
